HTML de la cabecera

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
         <link rel="stylesheet" href="assets/css/styles.css">
     </head>
     <body>
-        <h1>Proyecto 1 de Maquetación</h1>
+       <!-- Inicio de la cabecera -->
+       <header id="header">
+           <div id="logotipo">
+               <img src="assets/img/logo.png" alt="logotipo de la web" />
+           </div>
+           <h1>
+               <a href="index.html"></a>
+           </h1>
+       </header>
+       <!-- Final de la cabecera-->
     </body>
 </html>
